--- a/css/css/buttons.css
+++ b/css/css/buttons.css
@@ -5,17 +5,21 @@
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
+}
+.button:active {
+  transform: scale(.9);
 }
 
 #play {
-  background-image: url('./../assets/images/play.svg');
+  background-image: url('./../../assets/images/play.svg');
 }
 #pause {
-  background-image: url('./../assets/images/pause.svg');
+  background-image: url('./../../assets/images/pause.svg');
 }
 #backward {
-  background-image: url('./../assets/images/-10.svg');
+  background-image: url('./../../assets/images/-10.svg');
 }
 #forward {
-  background-image: url('./../assets/images/+10.svg');
+  background-image: url('./../../assets/images/+10.svg');
 }
