Add wrapper and player styles

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,10 @@
 body {
   background-color:aquamarine;
 }
+.wrapper {
+  max-inline-size: 900px;
+  margin: auto;
+}
+.player video {
+  inline-size: 100%;
+}
