--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
   position: absolute;
   inset: 0;
   display: flex;
+  gap: 20px;
   justify-content: center;
   align-items: center;
   z-index: 2;
