--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   inline-size: 100%;
   aspect-ratio: 16/9;
   vertical-align: middle;
+  object-fit: cover;
 }
 .player-title {
   color: #fff;
